--- a/static/scss/common.scss
+++ b/static/scss/common.scss
@@ -84,6 +84,11 @@ html,body{
     background-size: 100% 100%;
 }
 
+.text-hidden{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 .margin{
     margin: 0 auto;
 }
